Bugfix bow example pinch meshes scene add

--- a/examples/bow_ml.html
+++ b/examples/bow_ml.html
@@ -426,7 +426,7 @@
           _makePinchMesh(),
         ];
         pinchMeshes.forEach(pinchMesh => {
-          scene.add(pinchMeshes);
+          scene.add(pinchMesh);
         });
 
         const _onHands = updates => {
