Bow example clear cached pinch when not detected in gesture

--- a/examples/bow_ml.html
+++ b/examples/bow_ml.html
@@ -472,6 +472,9 @@
             pinchMesh.quaternion.fromArray(rotation);
             pinchMesh.visible = true;
           } else {
+            if (pinchedIndex === handIndex) {
+              pinchedIndex = -1;
+            }
             pinchMesh.visible = false;
           }
 
