Bugfix missing bow examples declarations

--- a/examples/bow_ml.html
+++ b/examples/bow_ml.html
@@ -56,10 +56,11 @@
     const localTransformScaleVector = new THREE.Vector3(3, 3, 3);
     const localVector = new THREE.Vector3();
     const localVector2 = new THREE.Vector3();
+    const localVector3 = new THREE.Vector3();
     const localQuaternion = new THREE.Quaternion();
     const localMatrix = new THREE.Matrix4();
     const localRay = new THREE.Ray();
-    const localLine = new THREE.Line();
+    const localLine = new THREE.Line3();
 
     const _makeButtons = () => ({
       trigger: false,
