Bow example syntax bugfix

--- a/examples/bow_ml.html
+++ b/examples/bow_ml.html
@@ -526,7 +526,7 @@
         const gamepads = navigator.getGamepads();
         const inputSources = display.session.getInputSources();
 
-        const _updateControllerMeshes = () =>> {
+        const _updateControllerMeshes = () => {
           const inputSources = display.session.getInputSources();
 
           for (let i = 0; i < inputSources.length; i++) {
