Buigfix bow example controller mesh matrix updates

--- a/examples/bow_ml.html
+++ b/examples/bow_ml.html
@@ -536,7 +536,8 @@
 
             const controllerMesh = controllerMeshes[i];
             controllerMesh.matrix.fromArray(pose.targetRay.transformMatrix);
-            controllerMesh.updateMatrixWorld(true);
+            controllerMesh.matrix.decompose(controllerMesh.position, controllerMesh.quaternion, controllerMesh.scale);
+            // controllerMesh.updateMatrixWorld(true);
           }
         };
         const _updateGamepads = () => {
