--- a/examples/bow_ml.html
+++ b/examples/bow_ml.html
@@ -585,7 +585,7 @@
             const pose = frame.getInputPose(inputSource);
             localMatrix
               .fromArray(pose.targetRay.transformMatrix)
-              .decompose(bowMesh.position, bowMesh.quaternion, localVector);
+              .decompose(bowMesh.position, bowMesh.quaternion, localVector2);
             stringMesh.position.copy(bowMesh.position);
             stringMesh.quaternion.copy(bowMesh.quaternion);
           }
@@ -596,6 +596,24 @@
             stringMesh.updatePull(pinchMesh.position);
           } else {
             stringMesh.updatePull(null);
+          }
+        };
+        const _updateNock = () => {
+          if (nockedArrowMesh) {
+            if (grabbedIndex === -1) {
+              const inputSource = inputSources[grabbedIndex];
+              const pose = frame.getInputPose(inputSource);
+              localMatrix
+                .fromArray(pose.targetRay.transformMatrix)
+                .decompose(localVector, localQuaternion, localVector2);
+              localVector
+                .add(
+                  localVector2
+                    .set(0, 0, 0.1)
+                    .applyQuaternion(localQuaternion)
+                );
+              nockedArrowMesh.updatePull(localVector);
+            }
           }
         };
         /* const _updateStringPosition = () => {
@@ -611,7 +629,7 @@
             stringMesh.updateMatrixWorld();
           }
         }; */
-        const _updateDrawnArrow = () => {
+        /* const _updateDrawnArrow = () => {
           if (drawnArrowMesh) {
             const _updateTransform = () => {
               const side = grabbable.getGrabberSide();
@@ -635,7 +653,7 @@
               _updateTransform();
             }
           }
-        };
+        }; */
         /* const _updatePull = () => {
           const position = pulling ? gamepads[OTHER_SIDES[grabbable.getGrabberSide()]].worldPosition : null;
 
@@ -718,8 +736,9 @@
         _updateGamepads();
         _updateGrab();
         _updatePinch();
+        _updateNock();
         // _updateStringPosition();
-        _updateDrawnArrow();
+        // _updateDrawnArrow();
         // _updatePull();
         _updateArrows();
       }
@@ -737,17 +756,22 @@
     });
     display.session = session;
 
-    /* session.onselect = e => {
-      const controllerIndex = e.inputSource.handedness === 'left' ? 0 : 1;
-      const controllerMesh = controllerMeshes[controllerIndex];
-      controllerMesh.matrixWorld.decompose(controllerMesh.position, controllerMesh.quaternion, controllerMesh.scale);
+    session.onselectstart = e => {
+      nockedArrowMesh = _makeArrowMesh();
+      scene.add(nockedArrowMesh);
+    };
+    session.onselectend = e => {
+      const arrow = nockedArrowMesh;
+      arrows.push(arrow);
 
-      const objectMesh = _makeControllerMesh(
-        controllerMesh.position.x, controllerMesh.position.y, controllerMesh.position.z,
-        controllerMesh.quaternion.x, controllerMesh.quaternion.y, controllerMesh.quaternion.z, controllerMesh.quaternion.w,
-      );
-      scene.add(objectMesh);
-    }; */
+      const now = Date.now();
+      arrow.startTime = now;
+      arrow.lastTime = now;
+      arrow.velocity.set(0, 0, -ARROW_SPEED * stringMesh.pullPosition.length())
+        .applyQuaternion(arrow.quaternion);
+
+      nockedArrowMesh = null;
+    };
 
     // console.log('request first frame');
     session.requestAnimationFrame((timestamp, frame) => {
